--- a/shtyxh-manager/WebContent/WEB-INF/view/index/associationInvestigation/associationInvestigationTypeList.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/associationInvestigation/associationInvestigationTypeList.html
@@ -28,7 +28,14 @@
 		
 		
 			<#list newsList as news>   
-		               <li><a href="${base.contextPath}/index/dcyyj/newsDetail?id=${news.id}"  title="${news.newstitle}">${news.newsSimpleTitle!}</a>
+		               <li>
+		               		<#if news.islink=="Y">
+			               			<a href="${news.linkpath}"  title="${news.newstitle}">${news.newsSimpleTitle!}</a>
+			               	<#else>
+			               			<a href="${base.contextPath}/index/dcyyj/newsDetail?id=${news.id}"  title="${news.newstitle}">${news.newsSimpleTitle!}</a>
+			               	</#if>
+		               		
+		     				 
 		     				 <span> ${news.createdate?string('yyyy-MM-dd HH:mm:ss')} </span>
 					    </li> 
 		    </#list>   
