--- a/shtyxh-manager/WebContent/WEB-INF/view/index/news/news.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/news/news.html
@@ -156,8 +156,13 @@ $(document).ready(function(){
 			                 </div>
 			
 			                 <ul class="c_list mt10 mb10 tab-con split" style="display:block">
-			                 	<#list typeList.newsList as newsList>   
-									<li><a href="${base.contextPath}/index/news/newsDetail?id=${newsList.id}" target="_blank" title="${newsList.newstitle}">${newsList.newstitle}</a></li>
+			                 	<#list typeList.newsList as newsList>  
+			                 			<#if newsList.islink=="Y">
+						               		<li><a href="${newsList.linkpath}" target="_blank" title="${newsList.newstitle}">${newsList.newstitle}</a></li>
+						               	<#else>
+						               		<li><a href="${base.contextPath}/index/news/newsDetail?id=${newsList.id}" target="_blank" title="${newsList.newstitle}">${newsList.newstitle}</a></li>
+						               	</#if> 
+									
 								</#list>
 		                	 </ul>
 			            </div>
