--- a/shtyxh-manager/WebContent/WEB-INF/view/index/index.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/index.html
@@ -9,6 +9,8 @@
 	src="${base.contextPath}/lib/index/search/static/js/jquery-1.11.1.min.js"></script>
 <script type="text/javascript"
 	src="${base.contextPath}/lib/index/js/index/common.js"></script>
+<script type="text/javascript"
+	src="${base.contextPath}/lib/index/js/index/floatAd.js"></script>
 <!-- 导航下轮播 -->
 <script type="text/javascript"
 	src="${base.contextPath}/lib/index/js/index/jquery.SuperSlide.2.1.1.js"></script>
@@ -17,6 +19,14 @@
 		var filePath = encodeURI(encodeURI(path));
 		window.location="${fileserver}/fileDownload?filePath="+filePath; 
 	}
+	
+	$(function(){
+		//调用漂浮插件
+		$("body").floatAd({
+			imgSrc : 'http://wenwen.soso.com/p/20100204/20100204193850-483274619.jpg',
+			url:'http://yanue.net'
+		});
+	})
 </script>
 </head>
 <body id="index">
