--- a/shtyxh-manager/WebContent/WEB-INF/view/admin/main.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/admin/main.html
@@ -89,6 +89,9 @@
 	<!-- 轮播图 -->
 	<script src="${base.contextPath}/lib/extjs/myExt/Carousel/Carousel.js"></script>
 	<script src="${base.contextPath}/lib/extjs/myExt/Carousel/item/addorUpdateCarouselWindow.js"></script>
+	<!-- 飘窗 -->
+	<script src="${base.contextPath}/lib/extjs/myExt/BayWindow/BayWindow.js"></script>
+	<script src="${base.contextPath}/lib/extjs/myExt/BayWindow/item/addorUpdatebayWindowWindow.js"></script>
 	<!-- 下载 -->
 	<script src="${base.contextPath}/lib/extjs/myExt/Download/Download.js"></script>
 	<script src="${base.contextPath}/lib/extjs/myExt/Download/item/addorUpdateDownloadWindow.js"></script>
