--- a/shtyxh-manager/WebContent/WEB-INF/view/index/index.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/index/index.html
@@ -19,14 +19,20 @@
 		var filePath = encodeURI(encodeURI(path));
 		window.location="${fileserver}/fileDownload?filePath="+filePath; 
 	}
-	
-	$(function(){
-		//调用漂浮插件
-		$("body").floatAd({
-			imgSrc : 'http://wenwen.soso.com/p/20100204/20100204193850-483274619.jpg',
-			url:'http://yanue.net'
-		});
-	})
+		$(function(){
+			//调用漂浮插件
+			$("body").floatAd({
+				imgSrc : '${fileserver}${baywindow.filePath}',
+				<#if baywindow.urltype==0> 
+					url:${baywindow.webUrl}
+				<#elseif baywindow.urltype==1> 
+					url:${base.contextPath}/index/news/newsDetail?id=${baywindow.newsId}
+				<#else> 
+					url:${base.contextPath}/index/assessmentDetail?id=${baywindow.activityId}
+				</#if> 
+				url:'${baywindow.webUrl}'
+			});
+		})
 </script>
 </head>
 <body id="index">
