--- a/shtyxh-manager/WebContent/WEB-INF/view/include/footer.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/include/footer.html
@@ -14,13 +14,20 @@
 		</div>
 		<div class="siteWidth">
 			<span style="float: center; height: 20px; line-height: 20px; margin: 0px 0px 0px 5px; color: #ffffff;">
+			
+			<a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=31010602004166" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
+			<img src="${base.contextPath}/resources/images/footer/police.png" style="float:left;"/>
+				沪公网安备 31010602004166号
+			</a>
+			
 			<#if ICPlicense??>
 			<a target="_blank" href="${ICPlicensePath}"
 				style="display: inline-block; text-decoration: none; height: 20px; line-height: 20px;">
 <!-- 				<img src="${base.contextPath}/lib/index/img/batb.png" -->
 <!-- 				style="float: left;" /> -->
-			${ICPlicense} </a>
+			|	${ICPlicense} </a>
 			</#if>
+			<br />
 			&nbsp;&nbsp;&nbsp;&nbsp;累计访问量:${visitCount}</span>
 		</div>
 
