1.添加消息通知

--- a/shtyxh-manager/WebContent/WEB-INF/view/admin/main.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/admin/main.html
@@ -89,6 +89,10 @@
 	<!-- 轮播图 -->
 	<script src="${base.contextPath}/lib/extjs/myExt/Carousel/Carousel.js"></script>
 	<script src="${base.contextPath}/lib/extjs/myExt/Carousel/item/addorUpdateCarouselWindow.js"></script>
+	<!-- 通知-->
+	<script src="${base.contextPath}/lib/extjs/myExt/Notice/Notice.js"></script>
+	<script src="${base.contextPath}/lib/extjs/myExt/Notice/item/addorUpdateNoticeWindow.js"></script>
+	
 	<!-- 飘窗 -->
 	<script src="${base.contextPath}/lib/extjs/myExt/BayWindow/BayWindow.js"></script>
 	<script src="${base.contextPath}/lib/extjs/myExt/BayWindow/item/addorUpdatebayWindowWindow.js"></script>
