1.添加职业等级鉴定

--- a/shtyxh-manager/WebContent/WEB-INF/view/include/navigation.html
+++ b/shtyxh-manager/WebContent/WEB-INF/view/include/navigation.html
@@ -119,6 +119,8 @@
 	               		 </li> 
 	               		 <li><a href="${base.contextPath}/index/jdypx/typeList?typeid=24">其他培训</a>
 	               		 </li> 
+	               		 <li><a href="${base.contextPath}/index/jdypx/typeList?typeid=41">职业等级鉴定</a>
+	               		 </li> 
 	                </ul>
                 </li>
                 <li id="ch_dcyyj" <#if chanel =='CH_DCYYJ'> class="actv" </#if>><a href="${base.contextPath}/index/dcyyj" >调查与研究</a>
